Add paragraphs to body and set up social media links

--- a/index.html
+++ b/index.html
@@ -10,15 +10,12 @@
 </head>
 <body>
  <!-- This will be the header section with h1 title and golf background underneath.  Navigation to sit underneath picture -->
-   
+ 
+ <div class="header">
 <header > 
     <a href="index.html">
-    <h1 id="logo">Fighting for Par Golf Society</h1>
+    <h1>Fighting for Par Golf Society</h1>
     </a>
-    <div id="main-image"></div>
-</header>
-
-    <hr>
 
     <nav>
         <a href="index.html" class="active">Home</a>
@@ -26,25 +23,44 @@
         <a href="form.html">Sign-Up</a>
         
     </nav>
+
+</header>
+ </div>
+
+<hr>
+
 <!--This section will talk about the reasons why people should join the Golf Society - maybe look to incoroprate images? -->
 <div>    
 <h2>Why this Golf Society?</h2>
 
         <ul>
             <li>Community</li>
-            <p>Sense of Community</p>
+            <p>By joining the golf society you will joing a great community of people to share golfing tips, play great rounds of golf and build ever lasting friendships. Golf is a sociable sport and it is one of the best for meeting new people and maintaining established relationships. Walking the golf course is an ideal method of catching up with friends and family.</p>
             <li>Healthy Competition</li>
+            <P>If you’re a member of a club, then you’ll get to experience competitions. If you belong to the nomadic title, however, then you won’t. While the society does provide healthy competition, it’s a lot more fun. Winning isn’t the overall goal, playing well and enjoying your afternoon is where the importance lies.</P>
             <li>Different Golf Courses</li>
+            <p>While I’m sure we are all proud of the golf club that we belong to, sometimes, just sometimes, it’s refreshing not to play the same course consecutively. Course knowledge and game management are two useful skills, but when you play a new course, the former goes out the window – 18 holes of pure chaos.</p>
             <li>You get to <strong>play</strong> even more golf!</li>
+            <P>If you’re an avid golfer, then I know you want to play more golf. I’m not sure there’s a single golfer on this planet that feels they play too much golf – I don’t even think it’s possible to play too much golf.</P>
         </ul>
 </div>
 
+<hr>
+
         <footer>
             <ul>
-                <li>Facebook</li>
-                <li>Twitter</li>
-                <li>Instagram</li>
-                <li>Youtube</li>
+                <li>
+                    <a href="https://facebook.com" target="_blank" rel="noopener">Facebook</a>
+                </li>
+                <li>
+                    <a href="https://twitter.com" target="_blank" rel="noopener">Twitter</a>
+                </li>
+                <li>
+                    <a href="https://instagram.com" target="_blank" rel="noopener">Instagram</a>
+                </li>
+                <li>
+                    <a href="https://youtube.com" target="_blank" rel="noopener">Youtube</a>
+                </li>
             </ul>
 
         </footer>
