--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 <hr>
 
         <footer>
-            <ul>
+            <ul class="social-media">
                 <li>
                     <a href="https://facebook.com" target="_blank" rel="noopener">Facebook</a>
                 </li>
