--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Fighting for Par Golf Society for all lovers of Golf">
     <meta name="keywords" content="golf, golf society, par">
+
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Fighting For Par</title>
 </head>
 <body>
