Add FontAwesome styling to social links

--- a/index.html
+++ b/index.html
@@ -52,20 +52,23 @@
         <footer>
             <ul class="social-media">
                 <li>
-                    <a href="https://facebook.com" target="_blank" rel="noopener">Facebook</a>
+                    <a href="https://facebook.com" target="_blank" rel="noopener"><i class="fa-brands fa-facebook-f"></i></a>
                 </li>
                 <li>
-                    <a href="https://twitter.com" target="_blank" rel="noopener">Twitter</a>
+                    <a href="https://twitter.com" target="_blank" rel="noopener"><i class="fa-brands fa-twitter"></i></a>
                 </li>
                 <li>
-                    <a href="https://instagram.com" target="_blank" rel="noopener">Instagram</a>
+                    <a href="https://instagram.com" target="_blank" rel="noopener"><i class="fa-brands fa-instagram"></i></a>
                 </li>
                 <li>
-                    <a href="https://youtube.com" target="_blank" rel="noopener">Youtube</a>
+                    <a href="https://youtube.com" target="_blank" rel="noopener"><i class="fa-brands fa-youtube"></i></a>
                 </li>
             </ul>
 
         </footer>
+
+        <!-- font awesome script-->
+        <script src="https://kit.fontawesome.com/a761bb6a60.js" crossorigin="anonymous"></script>
 </body>   
 
 </html>
