Add css styling to header and footer

--- a/index.html
+++ b/index.html
@@ -13,21 +13,16 @@
 <body>
  <!-- This will be the header section with h1 title and golf background underneath.  Navigation to sit underneath picture -->
  
- <div class="header">
-<header > 
-    <a href="index.html">
-    <h1>Fighting for Par Golf Society</h1>
-    </a>
 
-    <nav>
+<header > 
+    <h1>Fighting for Par Golf Society</h1>
+    
+    <nav id="nav">
         <a href="index.html" class="active">Home</a>
         <a href="gallery.html">Gallery</a>
         <a href="form.html">Sign-Up</a>
-        
     </nav>
-
 </header>
- </div>
 
 <hr>
 
@@ -37,7 +32,7 @@
 
         <ul>
             <li>Community</li>
-            <p>By joining the golf society you will joing a great community of people to share golfing tips, play great rounds of golf and build ever lasting friendships. Golf is a sociable sport and it is one of the best for meeting new people and maintaining established relationships. Walking the golf course is an ideal method of catching up with friends and family.</p>
+            <p>By joining the golf society you will join a great community of people to share golfing tips, play great rounds of golf and build ever lasting friendships. Golf is a sociable sport and it is one of the best for meeting new people and maintaining established relationships. Walking the golf course is an ideal method of catching up with friends and family.</p>
             <li>Healthy Competition</li>
             <P>If you’re a member of a club, then you’ll get to experience competitions. If you belong to the nomadic title, however, then you won’t. While the society does provide healthy competition, it’s a lot more fun. Winning isn’t the overall goal, playing well and enjoying your afternoon is where the importance lies.</P>
             <li>Different Golf Courses</li>
